<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="you_can_access_your_saved_cards_from_anywhere_with_gopay">You can access your saved cards from anywhere with goPay.</string>
    <string name="msg_ok">ok</string>


    <string name="titleText"> Payment in Progress.</string>
    <string name="descText">With your Fawry Pay Reference.</string>
    <string name="orderCodeText">Order Code.</string>
    <string name="codeExpireText">Code Expires on.</string>
    <string name="linkDescText">Please visit a Fawry Cash Location using the link below to complete your payment.</string>

    <string name="payText">PAY</string>

    <string name="msg_dismiss">dismiss</string>
    <string name="gopay">goPay</string>
    <string name="item_price">%s %s</string>
    <string name="back">Back</string>
    <string name="points">Points</string>
    <string name="points_abrv">Pts</string>
    <string name="aed">AED | </string>
    <string name="error_text_message">A minimum of AED 20.00 (200 Pts) is required</string>


    <string-array name="countries_list">

        <item>Kuwait    +965</item>
        <item>UAE </item>
        <item>RVs</item>
        <item>Trucks</item>

    </string-array>
</resources>