<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <company.tap.tapuilibraryy.uikit.atoms.TapTextViewNew
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/titleText"
        android:textColor="@color/dark_gray"
        android:textSize="10sp" />

    <company.tap.tapuilibraryy.uikit.atoms.TapTextViewNew
        android:id="@+id/descText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/descText"
        android:textColor="@color/dark_gray"
        android:textSize="10sp" />

    <company.tap.tapuilibraryy.uikit.atoms.TapTextViewNew
        android:id="@+id/orderCodeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/orderCodeText"
        android:textColor="@color/dark_gray"
        android:textSize="10sp" />


    <company.tap.tapuilibraryy.uikit.atoms.TapTextViewNew
        android:id="@+id/orderCodeValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="10sp" />


    <company.tap.tapuilibraryy.uikit.atoms.TapTextViewNew
        android:id="@+id/codeExpireText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/codeExpireText"
        android:textColor="@color/dark_gray"
        android:textSize="10sp" />


    <company.tap.tapuilibraryy.uikit.atoms.TapTextViewNew
        android:id="@+id/codeExpireValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="10sp" />


    <company.tap.tapuilibraryy.uikit.atoms.TapTextViewNew
        android:id="@+id/linkDescText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:lines="2"
        android:padding="10dp"
        android:text="@string/linkDescText"
        android:textColor="@color/dark_gray"
        android:textSize="10sp" />


    <company.tap.tapuilibraryy.uikit.atoms.TapTextViewNew
        android:id="@+id/linkValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="10sp" />


    <company.tap.tapuilibraryy.uikit.views.TabAnimatedActionButton
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center|bottom"
        android:layout_marginStart="@dimen/margin_basic_20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="@dimen/margin_basic_20dp"
        android:layout_marginBottom="22dp"
        android:visibility="visible" />
    <LinearLayout
        android:id="@+id/brandingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:layoutDirection="ltr"
        android:textDirection="firstStrongLtr"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <company.tap.tapuilibraryy.uikit.atoms.TapTextViewNew
            android:id="@+id/textViewPowered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Powered by"
            android:textColor="#626262"
            android:visibility="gone"
            android:textSize="@dimen/font_size_10sp"
            />
        <company.tap.tapuilibraryy.uikit.atoms.TapImageView
            android:layout_width="92dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_basic_4dp"
            android:layout_marginEnd="@dimen/margin_basic_4dp"
            android:id="@+id/tapLogoImage"
            />

    </LinearLayout>

</LinearLayout>